		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Staff: tweaked student accept to remove - from names
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		Students: tweaked student accept to remove - from names
		Students: fixed broken link from Family in student profile to sibling, when sibling is not enroled in the year
		Timetable: more graceful fail when getting Google Calendar and refreshToken is not present
		Timetable: PHP Notice fix on heigh constant
		Timetable: fixed typo in class edit view
		Timetable Admin: removed Left users from exception add screen
		User Admin: fixed PHP Notice issue in user import
		User Admin: tweaked link to family from Manage Users to fix year group no-show issue
		User Admin: fixed PHP Notice issue in student enrolment import
		User Admin: fixed mime-type issue in user image import function

v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
		New interface for defining interface string substitutions, along for custom language tweaks
		PHP 7 compatible
		Dashboards, with hooks, for staff and students
		New workflows for advertising job openings, accepting and processing applications
		Complete Dutch translation ("dank je" to Vic Mortelmans and Kris Clauw)

	Changes With Important Notices
		System: initial phase of object oriented PHP rewrite: expect errors during upload of the update.
		Students: moved student application form from its own module into Students
		Students: moved application form management from User Admin to Students module
		Students: moved student enrolment from User Admin to Students module